// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBlockAppender should append a default block when input focused 1`] = `
<div
  className="wp-block block-editor-default-block-appender"
  data-root-client-id=""
>
  <ForwardRef
    aria-label="Add block"
    className="block-editor-default-block-appender__content"
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    readOnly={true}
    role="button"
    value="Type / to choose a block"
  />
  <WithSelect(WithDispatch(IfCondition(Inserter)))
    __experimentalIsQuick={true}
    isAppender={true}
    position="bottom right"
  />
</div>
`;

exports[`DefaultBlockAppender should match snapshot 1`] = `
<div
  className="block-editor-default-block-appender"
  data-root-client-id=""
>
  <p
    aria-label="Add block"
    className="wp-block block-editor-default-block-appender__content"
    onFocus={[MockFunction]}
    role="button"
    tabIndex="0"
  >
    Type / to choose a block
  </p>
  <WithSelect(WithDispatch(IfCondition(Inserter)))
    __experimentalIsQuick={true}
    isAppender={true}
    position="bottom right"
  />
</div>
`;

exports[`DefaultBlockAppender should optionally show without prompt 1`] = `
<div
  className="wp-block block-editor-default-block-appender"
  data-root-client-id=""
>
  <ForwardRef
    aria-label="Add block"
    className="block-editor-default-block-appender__content"
    onFocus={[MockFunction]}
    readOnly={true}
    role="button"
    value=""
  />
  <WithSelect(WithDispatch(IfCondition(Inserter)))
    __experimentalIsQuick={true}
    isAppender={true}
    position="bottom right"
  />
</div>
`;
